welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:33: error: Unit does not take parameters
	avanceCommeSerpent()
                          ^